<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- AUTH ACTIVITY -->
    <string name="auth_activity_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="auth_activity_button_facebook">Sign in with Facebook</string>
    <string name="auth_activity_button_google">Sign in with Google</string>
    <string name="auth_activity_button_twitter">Sign in with Twitter</string>
    <string name="hello_blank_fragment" />
    <string name="connection_succeed">successful connection</string>
    <string name="error_authentication_canceled">authentication is canceled</string>
    <string name="error_no_internet">no internet connection</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_activity_no_choose_restaurant">You have not selected a restaurant</string>
    <string name="main_activity_success_log_out">Log out with success</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- NAVIGATION HEADER -->
    <string name="navigation_header_name">Name</string>
    <string name="navigation_header_email">Email</string>
    <string name="info_no_email_found">No email address</string>
    <string name="info_no_username_found">No username</string>

    <!-- NAVIGATION DRAWER MENU -->
    <string name="navigation_drawer_your_lunch">YOUR LUNCH</string>
    <string name="navigation_drawer_settings">SETTINGS</string>
    <string name="navigation_drawer_logout">LOGOUT</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_mapview">Map View</string>
    <string name="bottom_navigation_menu_listview">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>

    <!-- ITEM LIST RESTAURANTS -->
    <string name="item_restaurant_name">Restaurant</string>
    <string name="item_restaurant_address">Address</string>
    <string name="item_restaurant_hours">Hours</string>
    <string name="item_restaurant_distance">Distance</string>
    <string name="item_restaurant_number_rating">(1)</string>
    <string name="list_restaurants_open_now">Open now</string>
    <string name="list_restaurants_close_now">Close now</string>
    <string name="list_restaurants_closed">Closed</string>
    <string name="list_restaurants_open_at">"Open at"</string>
    <string name="list_restaurants_open_until">"Open until "</string>
    <string name="list_restaurants_no_hours">"Working hours are not available."</string>

    <!-- DETAILS RESTAURANT -->
    <string name="details_restaurant_name">Restaurant</string>
    <string name="details_restaurant_address">Address</string>
    <string name="details_restaurant_call">CALL</string>
    <string name="details_restaurant_like">LIKE</string>
    <string name="details_restaurant_website">WEBSITE</string>
    <string name="details_restaurant_choose_for_lunch">Your choice !</string>
    <string name="details_restaurant_no_longer_choose_for_lunch">Is no longer your choice !</string>
    <string name="details_restaurant_added_favorites">Add to your favorites !</string>
    <string name="details_restaurant_removed_favorites">Removed from your favorites !</string>
    <string name="details_restaurant_no_website">This restaurant does not have a website</string>
    <string name="details_restaurant_no_phone">This restaurant does not have a phone number</string>
    <string name="details_restaurant_not_restaurant">This is not a restaurant !</string>

    <!-- LIST WORKMATES ADAPTER -->
    <string name="list_workmates_adapter_decided">"\ eat at this restaurant: "</string>
    <string name="list_workmates_adapter_hasnt_decided_yet">\ hasn\'t decided yet</string>
    <string name="list_workmates_adapter_is_joining">%s is joining !</string>
    <string name="list_workmates_adapter_no_lunch">You haven\'t chosen a restaurant yet!</string>

    <!-- LIST CLIENT ADAPTER -->
    <string name="list_client_adapter_is_joining">\ Come !</string>


    <!-- GOOGLE MAP -->
    <string name="api_maps_key">AIzaSyAPGMoli1adgZDCo74zLcTHJYA2O0LmECc</string>
    <string name="api_place_key">AIzaSyBiIpE2vWrjxnBBMy61WqvrMfBdO6Lh4yI</string>
    <string name="bottom_navigation_menu_list_view">List View</string>
    <string name="bottom_navigation_menu_map_view">Map View</string>

    <!-- TOOL BAR -->
    <string name="Tool_bar_search_text">"I looking for a restaurant"</string>
    <string name="Tool_bar_error_unknown_error">unknown error</string>
    <string name="Tool_bar_title">I\'m hungry</string>

    <!-- FACEBOOK -->
    <string name="facebook_application_id">233673715444385</string>
    <string name="fb_login_protocol_scheme">fb233673715444385</string>


    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="notification_message_workmates">"you will eat with:  "</string>
    <string name="notification_title">You have received a notification</string>
    <string name="notification_message_today_restaurant">"Today your meal break will be at: "</string>
    <string name="notifications_onoff">"Would you like to receive a notification flagging workmates who will join you?"</string>


</resources>