<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/item_list_restaurant_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_restaurant_name_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_restaurant_name"
            style="@style/item_restaurant_name_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_restaurant_distance_txt"
            android:layout_margin="@dimen/item_restaurant_margin_default" />

        <TextView
            android:id="@+id/item_restaurant_address_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_restaurant_address"
            style="@style/item_restaurant_address_txt"
            app:layout_constraintTop_toBottomOf="@id/item_restaurant_name_txt"
            app:layout_constraintStart_toStartOf="@id/item_restaurant_name_txt"
            app:layout_constraintEnd_toStartOf="@id/item_restaurant_workmates_icon" />

        <TextView
            android:id="@+id/item_restaurant_hours_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_restaurant_hours"
            style="@style/item_restaurant_hours_open_txt"
            android:layout_marginBottom="@dimen/item_list_restaurant_margin_bottom_hours"
            app:layout_constraintTop_toBottomOf="@id/item_restaurant_address_txt"
            app:layout_constraintStart_toStartOf="@id/item_restaurant_address_txt"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/item_restaurant_distance_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_restaurant_distance"
            style="@style/item_restaurant_distance_txt"
            app:layout_constraintTop_toTopOf="@id/item_restaurant_name_txt"
            app:layout_constraintEnd_toStartOf="@id/item_restaurant_picture" />

        <TextView
            android:id="@+id/item_restaurant_number_rating_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_restaurant_number_rating"
            style="@style/item_restaurant_number_rating_txt"
            app:layout_constraintStart_toEndOf="@id/item_restaurant_workmates_icon"
            app:layout_constraintBottom_toBottomOf="@id/item_restaurant_workmates_icon" />

        <ImageView
            android:id="@+id/item_restaurant_picture"
            android:layout_width="@dimen/item_list_restaurant_size_image_illustration"
            android:layout_height="@dimen/item_list_restaurant_size_image_illustration"
            style="@style/item_restaurant_illustration_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_restaurant_name_txt"
            app:layout_constraintBottom_toBottomOf="@id/item_restaurant_hours_txt"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/item_restaurant_workmates_icon"
            android:layout_width="@dimen/item_list_restaurant_width_image"
            android:layout_height="@dimen/item_list_restaurant_height_people_rating"
            app:layout_constraintDimensionRatio="1:1"
            style="@style/item_restaurant_people_rating_image"
            app:layout_constraintTop_toTopOf="@id/item_restaurant_address_txt"
            app:layout_constraintEnd_toStartOf="@id/item_restaurant_picture"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/item_restaurant_star_1"
            android:layout_width="@dimen/item_list_restaurant_width_image"
            android:layout_height="@dimen/item_list_restaurant_height_star"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/item_restaurant_hours_txt"
            app:layout_constraintEnd_toEndOf="@id/item_restaurant_number_rating_txt"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/item_restaurant_star_2"
            android:layout_width="@dimen/item_list_restaurant_width_image"
            android:layout_height="@dimen/item_list_restaurant_height_star"
            app:layout_constraintDimensionRatio="1:1"
            style="@style/item_restaurant_stars_image"
            app:layout_constraintTop_toTopOf="@id/item_restaurant_star_1"
            app:layout_constraintRight_toLeftOf="@id/item_restaurant_star_1"
            android:contentDescription="@null"/>

        <ImageView
            android:id="@+id/item_restaurant_star_3"
            android:layout_width="@dimen/item_list_restaurant_width_image"
            android:layout_height="@dimen/item_list_restaurant_height_star"
            app:layout_constraintDimensionRatio="1:1"
            style="@style/item_restaurant_stars_image"
            app:layout_constraintTop_toTopOf="@id/item_restaurant_star_1"
            app:layout_constraintRight_toLeftOf="@id/item_restaurant_star_2"
            android:contentDescription="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>